force-app/main/default/objects/Bookmark__c/Bookmark__c.object-meta.xml
<CustomObject>
    <description>Custom object representing a bookmark of a URL.</description>
    <label>Bookmark</label>
    <nameField>
        <label>Bookmark Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>