force-app/main/default/objects/Bookmark__c/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <description>Short code for the bookmark.</description>
    <label>Short Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>