force-app/main/default/objects/Bookmark__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Comma separated tags for the bookmark.</description>
    <inlineHelpText>Enter tags for the bookmark - separate using commas.</inlineHelpText>
    <label>Tags</label>
    <type>TextArea</type>
</CustomField>