force-app/main/default/objects/Bookmark__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>The URL that the bookmark targets.</description>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>